@@ -27,6 +27,7 @@
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\V}{\mathbb{V}}
 \newcommand{\N}{\mathcal{N}}
+\newcommand{\AN}{\mathcal{AN}}
 \newcommand{\T}{\mathbf{T}}
 \renewcommand{\tt}{\mathbf{t}}
 \newcommand{\F}{\mathcal{F}}
