@@ -1,4 +1,12 @@
 
+@book{Serfling1980,
+  author = {Robert J. Serfling},
+  title = {Approximation Theorems of Mathematical Statistics},
+  year = 1980,
+  publisher = {John Wiley \& Sons},
+  address = {New York}
+}
+
 @book{RousseeuwLeroy2003,
   author = {P. J. Rousseeuw and A. M. Leroy},
   year = 2003,
